[gd_scene load_steps=4 format=3 uid="uid://ciyed3m337gr6"]

[ext_resource type="Script" path="res://lib/scenes/confirm_dialog.gd" id="1_tlf1k"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_8pi0x"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="3_1fc3n"]

[node name="ConfirmDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.5
offset_top = -286.5
offset_right = 285.5
offset_bottom = 286.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tlf1k")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -89.0
offset_right = 274.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Content"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Content/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ButtonCancel" type="Button" parent="Panel/Content/VBoxContainer/HBoxContainer"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Close"
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../ListSavegames")
focus_next = NodePath("../../ListSavegames")
focus_previous = NodePath("../../Bottom/ButtonDelete")
theme_override_fonts/font = ExtResource("2_8pi0x")
theme_override_font_sizes/font_size = 32
text = ""
script = ExtResource("3_1fc3n")
icon_size = 32
icon_name = "xmark"

[node name="LabelTitle" type="Label" parent="Panel/Content/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Panel/Content/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 6
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bottom" type="HBoxContainer" parent="Panel/Content/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonYes" type="Button" parent="Panel/Content/VBoxContainer/Bottom"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Apply"
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../i18n/OptionButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../../../../Top/ButtonClose")
focus_previous = NodePath("../../i18n/OptionButton")
theme_override_fonts/font = ExtResource("2_8pi0x")
theme_override_font_sizes/font_size = 32
text = ""
script = ExtResource("3_1fc3n")
icon_size = 32
icon_name = "check"

[node name="ButtonNo" type="Button" parent="Panel/Content/VBoxContainer/Bottom"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Close"
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../ListSavegames")
focus_next = NodePath("../../ListSavegames")
focus_previous = NodePath("../../Bottom/ButtonDelete")
theme_override_fonts/font = ExtResource("2_8pi0x")
theme_override_font_sizes/font_size = 32
text = ""
script = ExtResource("3_1fc3n")
icon_size = 32
icon_name = "xmark"

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="Panel/Content/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="close"]
[connection signal="pressed" from="Panel/Content/VBoxContainer/Bottom/ButtonYes" to="." method="_on_button_yes_pressed"]
[connection signal="pressed" from="Panel/Content/VBoxContainer/Bottom/ButtonNo" to="." method="_on_button_no_pressed"]
